syntax = "proto3";

option java_package = "com.kihong.dashboard";
option java_outer_classname = "DashboardProto";

service DashboardService {
  rpc AddLog (ResumeLogRequest) returns (ResumeLogResponse);
}

message ResumeLogRequest {
  string ip = 2;
  string timestamp = 3;
}

message ResumeLogResponse {
  string message = 1;
}